--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl:  # the subpath of your site, e.g. /blog
 url: https://eastonlee.com # the base hostname & protocol for your site, e.g. http://example.com
 enforce_ssl: eastonlee.com
-twitter_username: 
+twitter_username: easton042
 github_username:  easton042
 linkedin_username:  eastonlee
 
@@ -31,6 +31,7 @@ gems:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-gist
+  - jekyll-seo-tag
 exclude:
   - Gemfile
   - Gemfile.lock
