--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: EastonLee
 email: me@eastonlee.com
-description: > # this means to ignore newlines until "baseurl:"
+#description: > # this means to ignore newlines until "baseurl:"
 baseurl:  # the subpath of your site, e.g. /blog
 url: https://eastonlee.com # the base hostname & protocol for your site, e.g. http://example.com
 enforce_ssl: eastonlee.com
@@ -66,3 +66,5 @@ analytics_id: UA-58961104-2
 
 disqus:
   shortname: eastonlee
+
+excerpt_separator: <!--more-->
