update GitHub username

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl:  # the subpath of your site, e.g. /blog
 url: http://eastonlee.com # the base hostname & protocol for your site, e.g. http://example.com
 enforce_ssl: eastonlee.com
 twitter_username: easton042
-github_username:  easton042
+github_username:  eastonlee
 linkedin_username:  eastonlee
 
 # Build settings
