--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "This is Easton Lee's personal site where he places his thoughts in
 baseurl:  # the subpath of your site, e.g. /blog
 url: http://eastonlee.com # the base hostname & protocol for your site, e.g. http://example.com
 enforce_ssl: eastonlee.com
-twitter_username: easton042
+twitter_username: ImEastonLee
 github_username:  eastonlee
 linkedin_username:  eastonlee
 
