--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ defaults:
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-paginate
