--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-sitemap
+  # - jekyll-sitemap
   - jekyll-paginate
   - jekyll-gist
   - jekyll-seo-tag
